SberProject/metrics/k8s/metrics-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-deployment
  namespace: metrics
  labels:
    app: metrics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
        - name: metrics
          image: cr.yandex/crpl2ivjm7kaokv219ge/metrics_service:latest
          ports:
            - containerPort: 8080
