SberProject/metrics/k8s/metrics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: metrics
spec:
  selector:
    app: metrics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
